feat: add toggle to-do checked

--- a/src/style.css
+++ b/src/style.css
@@ -59,8 +59,12 @@ li {
 }
 
 
-li label {
-  margin-left: 5px;
+li label span {
+  padding-left: 5px;
+}
+
+.list li:has(input:checked) label {
+  color: hsl(200, 20%, 40%);
 }
 
 
